--- a/Group-A/about.css
+++ b/Group-A/about.css
@@ -105,6 +105,11 @@ nav li {
 
 nav a {
   color: #262626;
+  transition: all 0.3s;
+}
+
+nav a:hover{
+  color: #ff9500;
 }
 
 .active {
@@ -123,11 +128,22 @@ nav a {
   border-radius: 8px;
   font-size: 18px;
   font-weight: 400;
+  transition: all 0.3s;
+}
+
+.header .right-side a:nth-child(1):hover{
+  color: #ff9500;
 }
 
 .header .right-side a:nth-child(2) {
   background-color: #ff9500;
   color: #fff;
+}
+
+.header .right-side a:nth-child(2):hover{
+  color: #ff9500;
+  border: 1px solid #ff9500;
+  background-color: inherit;
 }
 
 .header .right-side a:active {
@@ -285,7 +301,6 @@ main .line {
   right: 14%;
 }
 
-
 .goals-footer button {
   height: fit-content;
   color: #FFF;
@@ -297,6 +312,13 @@ main .line {
   background: #FF9500;
   border: none;
   cursor: pointer;
+  transition: all 0.3s;
+}
+
+.goals-footer button:hover{
+  color: #ff9500;
+  border: 1px solid #ff9500;
+  background-color: inherit;
 }
 
 /* main end */
@@ -798,4 +820,8 @@ footer .bottom-side span {
     width: 100%;
   }
 
+  .goals-footer img{
+    top: 100px;
+    left: 45%;
+  }
 }
