--- a/Group-A/courses_open_style.css
+++ b/Group-A/courses_open_style.css
@@ -251,7 +251,7 @@ main .top-side #paragraph {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+align-self: center;
   gap: 6px;
 }
 .card .feature-items .feature-item .item-left-side #heading {
@@ -394,6 +394,7 @@ footer .bottom-side span {
 @media screen and (max-width: 1440px) {
   .container {
     max-width: 1280px;
+    margin: 0 auto;
   }
 
   .sale-wrapper {
@@ -424,6 +425,81 @@ footer .bottom-side span {
     padding: 12px 24px;
     font-size: 14px;
   }
+main .top-side{
+margin-top:100px;
+margin-bottom: 80px;
+}
+ main .top-side #heading{
+width: 600px;
+font-size: 38px;
+ }
+main .top-side #paragraph{
+  width: 600px;
+  font-size: 16px;
+}
+.video{
+  width: 1280px;
+  height: 649px;
+}
+.cards{
+  width: 100%;
+}
+.cards .card{
+  width: 630px;
+  height: 551px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 40px;
+  margin-top: 80px;
+}
+.cards:nth-child(3){
+  margin-bottom: 80px;
+}
+.card #number{
+  font-size: 60px;
+  height: 44px;
+}
+.card #intoduction{
+  font-size: 20px;
+font-weight: 600;
+line-height: 30px;
+letter-spacing: -0.12px;
+}
+.card .feature-items{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.card .feature-items .feature-item{
+  padding: 20px 24px;
+}
+.feature-items .feature-item .item-left-side #heading{
+  font-size: 16px;
+  height: 24px;
+  width: 441px !important;
+}
+.feature-items .feature-item .item-left-side #lesson span{
+  font-size: 14px;
+  height: 24px;
+}
+.feature-item .time{
+  padding: 10px;
+  font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
   footer .container {
     padding: 60px 0 20px 0;
@@ -466,13 +542,13 @@ footer .bottom-side span {
 
   footer .bottom-side span {
     font-size: 14px;
-  }
+  } 
 }
 
 @media screen and (max-width: 1024px) {
   .container {
-    max-width: calc(100%-32px);
-    padding: 0 20px;
+    max-width: calc(100%px-32px);
+    padding: 40px 16px 0 16px;
   }
 
   .sale-wrapper {
@@ -518,6 +594,130 @@ footer .bottom-side span {
     opacity: 1;
     visibility: visible;
   }
+  main .top-side{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+    width: 358px;
+  }
+  main .top-side #heading{
+    width: 358px;
+    font-size: 28px;
+     }
+    main .top-side #paragraph{
+      width: 350px;
+      font-size: 14px;
+    }
+    .video{
+      width: 358px;
+      height: 247px;
+      margin: 50px 0;
+    }
+    .video #videoCover{
+      border-radius: 10px;
+    }
+    .cards{
+      padding: 30px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    .cards .card{
+      width: 358px;
+      height: 837px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      padding: 24px;
+      /* margin-top: 80px; */
+    }
+    /* .cards:nth-child(3){
+      margin-bottom: 80px;
+    } */
+    .card #number{
+      font-size: 50px;
+      height: 37px;
+      margin-bottom: 30px;
+    }
+    .card #intoduction{
+      font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+    letter-spacing: -0.108px;
+    margin-bottom: 30px;
+    }
+    .card .feature-items{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+    .card .feature-items .feature-item{
+      width: 298px;
+      height: 183px;
+      padding: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+    }
+    .feature-item:nth-child(3){
+      margin-bottom: 100px;
+    }
+    .item-left-side{
+      width: 250px;
+      height: 69px;
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+    }
+    .feature-items .feature-item .item-left-side #heading{
+      font-size: 16px !important;
+      height: 48px;
+      width: 250px !important;
+    }
+    .feature-items .feature-item .item-left-side #lesson{
+      width: 250px;
+      height: 21px;
+      font-size: 14px !important;
+      margin-top: 25px;
+ }
+ .feature-item:nth-child(3)  .item-left-side #lesson{
+  margin-top: 0px !important;
+ }
+    .feature-items .feature-item .item-left-side #lesson span{
+      font-size: 14px;
+    }
+    .feature-item .time{
+left: 0;
+      font-size: 14px;
+    }    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
 
   footer .container {
     padding: 50px 20px 24px;
