--- a/Group-A/index.css
+++ b/Group-A/index.css
@@ -710,12 +710,12 @@ main .index-main-image img {
 
 .benefits-container .wrapper {
   display: flex;
-  justify-content: space-between;
+  gap: 300px;
   width: 100%;
 }
 
 .benefits-container .wrapper .text-container {
-  width: 1177px;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
@@ -742,6 +742,7 @@ main .index-main-image img {
   font-size: 18px;
   font-weight: 500;
   color: #262626;
+  flex-shrink: 0;
 }
 
 .benefits-container .wrapper button:active {
@@ -808,8 +809,8 @@ main .index-main-image img {
     gap: 60px;
   }
 
-  .benefits-container .wrapper .text-container {
-    width: 933px;
+  .benefits-container .wrapper {
+    gap: 250px;
   }
 
   .benefits-container .wrapper .text-container h2 {
@@ -871,10 +872,6 @@ main .index-main-image img {
     gap: 20px;
   }
 
-  .benefits-container .wrapper .text-container {
-    width: 358px;
-  }
-
   .benefits-container .wrapper .text-container h2 {
     font-size: 28px;
   }
@@ -925,12 +922,12 @@ main .index-main-image img {
 }
 .courses-container .wrapper {
   display: flex;
-  justify-content: space-between;
+  gap: 300px;
   width: 100%;
 }
 
 .courses-container .wrapper .text-container {
-  width: 1177px;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
@@ -957,6 +954,7 @@ main .index-main-image img {
   font-size: 18px;
   font-weight: 500;
   color: #262626;
+  flex-shrink: 0;
 }
 
 .courses-container .wrapper button:active {
@@ -1062,8 +1060,8 @@ main .index-main-image img {
     gap: 60px;
   }
 
-  .courses-container .wrapper .text-container {
-    width: 933px;
+  .courses-container .wrapper {
+    gap: 250px;
   }
 
   .courses-container .wrapper .text-container h2 {
@@ -1133,10 +1131,6 @@ main .index-main-image img {
     gap: 20px;
   }
 
-  .courses-container .wrapper .text-container {
-    width: 357px;
-  }
-
   .courses-container .wrapper .text-container h2 {
     font-size: 28px;
   }
@@ -1148,9 +1142,9 @@ main .index-main-image img {
   .courses-container .wrapper button {
     align-self: start;
   }
-  .courses-container .card-container{
+  .courses-container .card-container {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: repeat(6, 1fr);
   }
 
   .courses-container .card-container .card {
@@ -1175,5 +1169,579 @@ main .index-main-image img {
   .courses-container .card-container .card .text-container p {
     font-size: 14px;
   }
-
 }
+
+/* Testimonials-Container */
+
+.testimonials-container {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+.testimonials-container .wrapper {
+  display: flex;
+  width: 100%;
+  gap: 300px;
+}
+
+.testimonials-container .wrapper .text-container {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
+.testimonials-container .wrapper .text-container h2 {
+  color: #262626;
+  font-size: 48px;
+  font-weight: 600;
+}
+
+.testimonials-container .wrapper .text-container p {
+  color: #59595a;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.testimonials-container .wrapper button {
+  align-self: end;
+  border-radius: 8px;
+  border: 1px solid #f1f1f3;
+  background: #fcfcfd;
+  padding: 18px 24px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 500;
+  color: #262626;
+  flex-shrink: 0;
+}
+
+.testimonials-container .wrapper button:active {
+  scale: 0.99;
+}
+
+.testimonials-container .card-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 30px;
+  margin-bottom: 170px;
+}
+
+.testimonials-container .card-container .card {
+  border-radius: 12px;
+  border: 1px solid #f1f1f3;
+  background-color: #fff;
+}
+
+.testimonials-container .card-container .card p {
+  border-bottom: 1px solid #f1f1f3;
+  padding: 50px;
+  color: #4c4c4d;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.testimonials-container .card-container .card .user-container {
+  background-color: #fcfcfd;
+  display: flex;
+  padding: 30px;
+  align-items: center;
+}
+
+.testimonials-container .card-container .card .user-container .left-side {
+  display: flex;
+  gap: 15px;
+  flex-grow: 1;
+  align-items: center;
+}
+
+.testimonials-container .card-container .card .user-container .left-side h4 {
+  color: #333;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.testimonials-container
+  .card-container
+  .card
+  .user-container
+  .left-side
+  .user-image {
+  width: 60px;
+  height: 60px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.testimonials-container
+  .card-container
+  .card
+  .user-container
+  .left-side
+  .user-image
+  img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.testimonials-container .card-container .card .user-container button {
+  padding: 18px 24px;
+  border-radius: 8px;
+  border: 1px solid #f1f1f3;
+  background-color: #f7f7f8;
+  color: #262626;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.testimonials-container .card-container .card .user-container button:active {
+  scale: 0.99;
+}
+
+@media screen and (max-width: 1440px) {
+  .testimonials-container {
+    gap: 60px;
+  }
+
+  .testimonials-container .wrapper {
+    gap: 250px;
+  }
+
+  .testimonials-container .wrapper .text-container h2 {
+    font-size: 38px;
+  }
+
+  .testimonials-container .wrapper .text-container p {
+    font-size: 16px;
+  }
+
+  .testimonials-container .wrapper button {
+    border-radius: 6px;
+    padding: 14px 20px;
+    font-size: 14px;
+  }
+
+  .testimonials-container .card-container {
+    gap: 20px;
+    margin-bottom: 100px;
+  }
+
+  .testimonials-container .card-container .card {
+    border-radius: 10px;
+  }
+
+  .testimonials-container .card-container .card p {
+    padding: 40px;
+    font-size: 16px;
+  }
+
+  .testimonials-container .card-container .card .user-container {
+    padding: 24px;
+  }
+
+  .testimonials-container .card-container .card .user-container .left-side {
+    gap: 10px;
+  }
+
+  .testimonials-container .card-container .card .user-container .left-side h4 {
+    font-size: 16px;
+  }
+
+  .testimonials-container
+    .card-container
+    .card
+    .user-container
+    .left-side
+    .user-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 6px;
+  }
+
+  .testimonials-container .card-container .card .user-container button {
+    padding: 14px 16px;
+    border-radius: 6px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .testimonials-container {
+    gap: 40px;
+  }
+
+  .testimonials-container .wrapper {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .testimonials-container .wrapper .text-container h2 {
+    font-size: 28px;
+  }
+
+  .testimonials-container .wrapper .text-container p {
+    font-size: 14px;
+  }
+
+  .testimonials-container .wrapper button {
+    border-radius: 6px;
+    padding: 14px 20px;
+    font-size: 14px;
+    align-self: start;
+  }
+
+  .testimonials-container .card-container {
+    margin-bottom: 50px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+  .testimonials-container .card-container .card p {
+    padding: 30px;
+    font-size: 14px;
+  }
+
+  .testimonials-container .card-container .card .user-container {
+    padding: 20px 30px;
+  }
+}
+/* Pricing-Container */
+
+.pricing-container {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+.pricing-container .wrapper {
+  display: flex;
+  width: 100%;
+  gap: 300px;
+}
+
+.pricing-container .wrapper .text-container {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
+.pricing-container .wrapper .text-container h2 {
+  color: #262626;
+  font-size: 48px;
+  font-weight: 600;
+}
+
+.pricing-container .wrapper .text-container p {
+  color: #59595a;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.pricing-container .wrapper .btn-container {
+  align-self: end;
+  padding: 12px;
+  display: flex;
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+.pricing-container .wrapper .btn-container button {
+  padding: 14px 30px;
+  border-radius: 6px;
+  background-color: #ff9500;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.pricing-container .wrapper .btn-container button:nth-child(2) {
+  color: #4c4c4d;
+  background-color: transparent;
+}
+
+.pricing-container .wrapper button:active {
+  scale: 0.99;
+}
+
+.pricing-container .card-container {
+  display: flex;
+  padding: 80px;
+  gap: 30px;
+  margin-bottom: 150px;
+  border-radius: 12px;
+  background-color: #fff;
+}
+
+.pricing-container .card-container .card {
+  flex-grow: 1;
+  padding: 50px 30px 30px;
+  border-radius: 12px;
+  border: 1px solid #f1f1f3;
+  background-color: #fcfcfd;
+}
+
+.pricing-container .card-container .card h5 {
+  border-radius: 6px;
+  border: 1px solid #ffeacc;
+  background-color: #fff9f0;
+  padding: 12px 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #262626;
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
+.pricing-container .card-container .card .price-wrapper {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.pricing-container .card-container .card .price-wrapper h2 {
+  color: #262626;
+  font-size: 80px;
+  font-weight: 600;
+}
+
+.pricing-container .card-container .card .price-wrapper span {
+  color: #4c4c4d;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.pricing-container .card-container .card .features-wrapper {
+  border-radius: 14px 14px 0px 0px;
+  border: 1px solid #f1f1f3;
+  background-color: #fff;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+
+.pricing-container .card-container .card .features-wrapper #A1 {
+  color: #262626;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.pricing-container .card-container .card .features-wrapper ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  padding: 0 30px;
+}
+
+.pricing-container .card-container .card .features-wrapper li {
+  display: flex;
+  gap: 12px;
+  padding: 14px;
+  border-radius: 8px;
+  border: 1px solid #f1f1f3;
+  align-items: center;
+  width: 100%;
+}
+
+.pricing-container .card-container .card .features-wrapper li p {
+  color: #4c4c4d;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.pricing-container .card-container .card .features-wrapper li .check-img {
+  box-sizing: content-box;
+  border-radius: 6px;
+  background-color: #fff4e5;
+  padding: 6px;
+  height: 20px;
+  width: 20px;
+  flex-shrink: 0;
+}
+
+.pricing-container .card-container .card .features-wrapper li .check-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.pricing-container .card-container .card .features-wrapper li .reject {
+  border: 1px solid #f1f1f3;
+  background-color: transparent;
+}
+
+.pricing-container .card-container .card button {
+  border-radius: 0px 0px 8px 8px;
+  padding: 20px 24px;
+  background-color: #ff9500;
+  width: 100%;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+
+.pricing-container .card-container .card button:active {
+  scale: 0.99;
+}
+
+@media screen and (max-width: 1440px) {
+  .pricing-container {
+    gap: 60px;
+  }
+  .pricing-container .wrapper {
+    gap: 250px;
+  }
+
+  .pricing-container .wrapper .text-container h2 {
+    font-size: 38px;
+  }
+
+  .pricing-container .wrapper .text-container p {
+    font-size: 16px;
+  }
+
+  .pricing-container .wrapper .btn-container button {
+    padding: 12px 24px;
+    font-size: 14px;
+  }
+
+  .pricing-container .card-container {
+    padding: 50px;
+    margin-bottom: 100px;
+  }
+
+  .pricing-container .card-container .card {
+    padding: 40px 24px 24px;
+  }
+
+  .pricing-container .card-container .card h5 {
+    border-radius: 4px;
+    padding: 10px 22px;
+    font-size: 18px;
+    margin-bottom: 50px;
+  }
+
+  .pricing-container .card-container .card .price-wrapper h2 {
+    font-size: 60px;
+  }
+
+  .pricing-container .card-container .card .price-wrapper span {
+    font-size: 16px;
+  }
+
+  .pricing-container .card-container .card .features-wrapper {
+    padding: 30px;
+    gap: 24px;
+  }
+
+  .pricing-container .card-container .card .features-wrapper #A1 {
+    font-size: 18px;
+  }
+
+  .pricing-container .card-container .card .features-wrapper li {
+    gap: 8px;
+    padding: 12px;
+    border-radius: 6px;
+  }
+
+  .pricing-container .card-container .card .features-wrapper li p {
+    font-size: 14px;
+  }
+
+  .pricing-container .card-container .card .features-wrapper li .check-img {
+    border-radius: 4px;
+    padding: 4px;
+    height: 16px;
+    width: 16px;
+  }
+
+  .pricing-container .card-container .card button {
+    padding: 18px 24px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .pricing-container {
+    gap: 40px;
+  }
+  .pricing-container .wrapper {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .pricing-container .wrapper .text-container h2 {
+    font-size: 28px;
+  }
+
+  .pricing-container .wrapper .text-container p {
+    font-size: 14px;
+  }
+
+  .pricing-container .wrapper .btn-container {
+    align-self: center;
+  }
+
+  .pricing-container .wrapper .btn-container button {
+    font-size: 14px;
+  }
+
+  .pricing-container .card-container {
+    padding: 20px;
+    margin-bottom: 50px;
+    flex-direction: column;
+  }
+
+  .pricing-container .card-container .card {
+    padding: 30px 20px 20px;
+  }
+
+  .pricing-container .card-container .card h5 {
+    padding: 8px 22px;
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+
+  .pricing-container .card-container .card .price-wrapper {
+    margin-bottom: 30px;
+  }
+
+  .pricing-container .card-container .card .price-wrapper h2 {
+    font-size: 50px;
+  }
+
+  .pricing-container .card-container .card .price-wrapper span {
+    font-size: 14px;
+  }
+
+  .pricing-container .card-container .card .features-wrapper {
+    border-radius: 10px 10px 0px 0px;
+    padding: 20px;
+    gap: 20px;
+  }
+
+  .pricing-container .card-container .card .features-wrapper ul {
+    padding: 0;
+  }
+
+  .pricing-container .card-container .card .features-wrapper li {
+    gap: 8px;
+    padding: 12px;
+    border-radius: 6px;
+  }
+}
+/* FAQ */
