--- a/Group-A/index.css
+++ b/Group-A/index.css
@@ -437,7 +437,7 @@ main {
 .introduction {
   display: flex;
   flex-direction: column;
-  width: 965px;
+  max-width: 965px;
   margin: 0 auto;
   text-align: center;
 }
@@ -458,7 +458,6 @@ main {
   background-color: #fcfcfd;
   padding: 14px 20px;
   position: relative;
-  width: auto;
   margin-bottom: 20px;
 }
 
@@ -579,10 +578,6 @@ main .index-main-image img {
     margin-top: 80px;
   }
 
-  .introduction {
-    width: 941px;
-  }
-
   .introduction .wrapper .h2-container {
     border-radius: 8px;
     padding: 12px;
@@ -633,10 +628,6 @@ main .index-main-image img {
 @media screen and (max-width: 1024px) {
   main {
     margin-top: 50px;
-  }
-
-  .introduction {
-    width: 332px;
   }
 
   .introduction .wrapper .h2-container {
@@ -1744,4 +1735,292 @@ main .index-main-image img {
     border-radius: 6px;
   }
 }
+
 /* FAQ */
+
+.faq-container {
+  display: flex;
+  gap: 120px;
+  padding: 100px;
+  border-radius: 12px;
+  background-color: #fff;
+  margin-bottom: 142px;
+}
+
+.faq-container .left-side .text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 50px;
+  max-width: 408px;
+}
+
+.faq-container .left-side .text-container h3 {
+  color: #262626;
+  font-size: 48px;
+  font-weight: 600;
+}
+
+.faq-container .left-side .text-container p {
+  color: #333;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.faq-container .left-side button {
+  border-radius: 8px;
+  border: 1px solid #f1f1f3;
+  background-color: #fff;
+  padding: 18px 24px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  color: #262626;
+}
+
+.faq-container .left-side button:active {
+  scale: 0.99;
+}
+
+.faq-container .right-side {
+  flex-grow: 1;
+}
+
+.faq-container .right-side ul {
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
+}
+
+.faq-container .right-side li {
+  padding: 30px 50px;
+  border-radius: 12px;
+  border: 1px solid #f1f1f3;
+}
+
+.faq-container .right-side li .question-wrapper {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+
+.faq-container .right-side li .question-wrapper h5 {
+  font-size: 20px;
+  font-weight: 500;
+  color: #262626;
+  flex-grow: 1;
+}
+
+.faq-container .right-side li .question-wrapper .icon-container {
+  width: 28px;
+  height: 28px;
+  box-sizing: content-box;
+  padding: 12px;
+  border-radius: 8px;
+  background-color: #fff4e5;
+  display: flex;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+  flex-shrink: 0;
+}
+
+.faq-container .right-side li .question-wrapper .icon-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+.faq-container .right-side li .question-wrapper .icon-container:active {
+  scale: 0.9;
+}
+
+#open-li {
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+#open-li .question-wrapper {
+  border-bottom: 1px solid #f1f1f3;
+  padding-bottom: 24px;
+  display: flex;
+  gap: 30px;
+}
+
+#open-li .answer {
+  font-size: 18px;
+  font-weight: 400;
+  color: #4c4c4d;
+}
+
+#open-li .enrollment-container {
+  display: flex;
+  align-items: center;
+  padding: 20px 30px;
+  border-radius: 8px;
+  border: 1px solid #f1f1f3;
+  background-color: #f7f7f8;
+  cursor: pointer;
+}
+
+#open-li .enrollment-container p {
+  flex-grow: 1;
+  font-size: 18px;
+  font-weight: 500;
+  color: #333333;
+}
+
+#open-li .enrollment-container .anchor-img {
+  width: 28px;
+  height: 28px;
+  padding: 14px;
+  border-radius: 50%;
+  box-sizing: content-box;
+  background-color: #fff;
+  flex-shrink: 0;
+}
+
+#open-li .enrollment-container .anchor-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 1440px) {
+  .faq-container {
+    gap: 80px;
+    padding: 80px;
+    margin-bottom: 100px;
+  }
+
+  .faq-container .left-side .text-container {
+    gap: 8px;
+    margin-bottom: 40px;
+  }
+
+  .faq-container .left-side .text-container h3 {
+    font-size: 38px;
+  }
+
+  .faq-container .left-side .text-container p {
+    font-size: 16px;
+  }
+
+  .faq-container .left-side button {
+    border-radius: 6px;
+    padding: 14px 20px;
+    font-size: 14px;
+  }
+
+  .faq-container .right-side li {
+    padding: 24px 40px;
+    border-radius: 10px;
+  }
+
+  .faq-container .right-side li .question-wrapper {
+    gap: 40px;
+  }
+
+  .faq-container .right-side li .question-wrapper h5 {
+    font-size: 18px;
+  }
+
+  .faq-container .right-side li .question-wrapper .icon-container {
+    width: 24px;
+    height: 24px;
+    padding: 10px;
+    border-radius: 6px;
+  }
+
+  #open-li {
+    padding: 40px;
+    gap: 40px;
+  }
+
+  #open-li .question-wrapper {
+    padding-bottom: 20px;
+  }
+
+  #open-li .answer {
+    font-size: 16px;
+  }
+
+  #open-li .enrollment-container {
+    padding: 16px 24px;
+    border-radius: 6px;
+  }
+
+  #open-li .enrollment-container p {
+    font-size: 16px;
+  }
+
+  #open-li .enrollment-container .anchor-img {
+    width: 24px;
+    height: 24px;
+    padding: 12px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .faq-container {
+    gap: 40px;
+    padding: 24px;
+    margin-bottom: 50px;
+    flex-direction: column;
+  }
+
+  .faq-container .left-side .text-container {
+    margin-bottom: 20px;
+  }
+
+  .faq-container .left-side .text-container h3 {
+    font-size: 28px;
+  }
+
+  .faq-container .left-side .text-container p {
+    font-size: 14px;
+  }
+
+  .faq-container .right-side ul {
+    gap: 20px;
+  }
+
+  .faq-container .right-side li {
+    padding: 20px 24px;
+  }
+
+  .faq-container .right-side li .question-wrapper h5 {
+    font-size: 16px;
+  }
+
+  .faq-container .right-side li .question-wrapper .icon-container {
+    width: 20px;
+    height: 20px;
+  }
+
+  #open-li {
+    padding: 24px;
+    gap: 20px;
+  }
+
+  #open-li .answer {
+    font-size: 14px;
+  }
+
+  #open-li .enrollment-container {
+    padding: 12px 20px;
+  }
+
+  #open-li .enrollment-container p {
+    font-size: 14px;
+  }
+
+  #open-li .enrollment-container .anchor-img {
+    width: 20px;
+    height: 20px;
+    padding: 10px;
+  }
+}
