--- a/Group-A/courses_open_style.css
+++ b/Group-A/courses_open_style.css
@@ -246,7 +246,7 @@ main .top-side #paragraph {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-align-self: center;
+  align-self: center;
   gap: 6px;
 }
 .card .feature-items .feature-item .item-left-side #heading {
@@ -254,19 +254,19 @@ align-self: center;
   font-size: 20px;
   font-weight: 500;
   line-height: 30px;
-  height: 27px;
+  /* height: 27px; */
 }
-.card:nth-child(1) .feature-items .feature-item:nth-child(3) .item-left-side #heading {
-  margin-bottom: 30px;
-}
+
 .card .feature-items .feature-item .item-left-side #lesson {
   color: #59595a;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
-  height: 27px;
+  /* height: 27px; */
 }
+
 .card .feature-items .feature-item .time {
+  margin-top: 5px;
   padding: 12px 14px;
   background-color: #f7f7f8;
   color: #59595a;
@@ -277,6 +277,7 @@ align-self: center;
   font-weight: 400;
   gap: 4px;
 }
+
 .active {
   border: 2px solid #ffd599;
   box-shadow: 0px 0px 0px 4px #fff4e5;
@@ -419,102 +420,92 @@ footer .bottom-side span {
     padding: 12px 24px;
     font-size: 14px;
   }
-main .top-side{
-margin-top:100px;
-margin-bottom: 80px;
-}
- main .top-side #heading{
-width: 600px;
-font-size: 38px;
- }
-main .top-side #paragraph{
-  width: 600px;
-  font-size: 16px;
-}
-.video{
-  width: 1280px;
-  height: 649px;
-}
-.cards{
-  width: 100%;
-  margin-top: 60px;
-
-}
-.cards .card{
-  width: 630px;
-  height: 527px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 40px;
-  margin-top: 20px !important;
-}
-.cards:nth-child(1){
-  height: 588px;
-}
-.cards:nth-child(2){
-  height: 588px;
-}
-.cards:nth-child(3){
-  margin-bottom: 80px;
-}
-.card #number{
-  font-size: 60px;
-  height: 44px;
-}
-.card #intoduction{
-  font-size: 20px;
-font-weight: 600;
-line-height: 30px;
-letter-spacing: -0.12px;
-}
-.card .feature-items{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-.card .feature-items .feature-item{
-  padding: 20px 24px;
-  width: 550px;
-}
-.feature-item .item-left-side{
-  display: flex;
-  gap: 0px !important;
-}
-.feature-items .feature-item .item-left-side #heading{
-  font-size: 16px !important;
-  height: 24px;
-  width: 345px !important;
-}
-.feature-items .feature-item .item-left-side #lesson span{
-  font-size: 14px;
-  height: 24px;
-}
-.feature-item .time{
-  padding: 10px;
-  font-size: 14px;
-  background-color: #f7f7f8;
-  color: #59595a;
-  border-radius: 6px;
-  font-weight: 400;
-  gap: 4px;
-} 
-.feature-item:nth-child(3) {
-  display: flex;
-  gap: 0px !important;
-}
-
-
-
-
-
-
-
-
-
-
-
+  main .top-side {
+    margin-top: 100px;
+    margin-bottom: 80px;
+  }
+  main .top-side #heading {
+    width: 600px;
+    font-size: 38px;
+  }
+  main .top-side #paragraph {
+    width: 600px;
+    font-size: 16px;
+  }
+  .video {
+    width: 1280px;
+    height: 649px;
+  }
+  .cards {
+    width: 100%;
+    margin-top: 60px;
+  }
+  .cards .card {
+    width: 630px;
+    height: 527px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 40px;
+    margin-top: 20px !important;
+  }
+  .cards:nth-child(1) {
+    height: 588px;
+  }
+  .cards:nth-child(2) {
+    height: 588px;
+  }
+  .cards:nth-child(3) {
+    margin-bottom: 80px;
+  }
+  .card #number {
+    font-size: 60px;
+    height: 44px;
+  }
+  .card #intoduction {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: -0.12px;
+  }
+  .card .feature-items {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  .card .feature-items .feature-item {
+    padding: 20px 24px;
+    width: 550px;
+  }
+  .feature-item .item-left-side {
+    display: flex;
+    gap: 0px !important;
+    flex-grow: 1;
+  }
+  .feature-items .feature-item .item-left-side #heading {
+    font-size: 16px !important;
+    /* height: 24px; */
+    width: 345px !important;
+  }
+  .feature-items .feature-item .item-left-side #lesson{
+    /* padding-top: 30px; */
+    font-size: 14px;
+    height: 24px;
+  }
+  .feature-item .time {
+    padding: 10px;
+    font-size: 14px;
+    background-color: #f7f7f8;
+    color: #59595a;
+    border-radius: 6px;
+    font-weight: 400;
+    gap: 4px;
+  }
+  .feature-item:nth-child(3) {
+    display: flex;
+    gap: 0px !important;
+  }
 
   footer .container {
     padding: 60px 0 20px 0;
@@ -557,7 +548,7 @@ letter-spacing: -0.12px;
 
   footer .bottom-side span {
     font-size: 14px;
-  } 
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -609,7 +600,7 @@ letter-spacing: -0.12px;
     opacity: 1;
     visibility: visible;
   }
-  main .top-side{
+  main .top-side {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -617,124 +608,102 @@ letter-spacing: -0.12px;
     gap: 16px;
     width: 358px;
   }
-  main .top-side #heading{
+  main .top-side #heading {
     width: 358px;
     font-size: 28px;
-     }
-    main .top-side #paragraph{
-      width: 350px;
-      font-size: 14px;
-    }
-    .video{
-      width: 358px;
-      height: 247px;
-      margin: 50px 0;
-    }
-    .video #videoCover{
-      border-radius: 10px;
-    }
-    .cards{
-      max-width: 100%;
-      margin-right: 16px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-    .cards .card{
-      max-width: 358px;
-      height: 837px;
-      display: flex;
-      flex-direction: column;
-      gap: 30px;
-      padding: 24px;
-    }
-    .card #number{
-      font-size: 50px;
-      height: 37px;
-      margin-bottom: 30px;
-    }
-    .card #intoduction{
-      font-size: 18px;
+  }
+  main .top-side #paragraph {
+    width: 350px;
+    font-size: 14px;
+  }
+  .video {
+    width: 358px;
+    height: 247px;
+    margin: 50px 0;
+  }
+  .video #videoCover {
+    border-radius: 10px;
+  }
+  .cards {
+    max-width: 100%;
+    margin-right: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .cards .card {
+    max-width: 358px;
+    height: 837px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 24px;
+  }
+  .card #number {
+    font-size: 50px;
+    height: 37px;
+    margin-bottom: 30px;
+  }
+  .card #intoduction {
+    font-size: 18px;
     font-weight: 600;
     line-height: 27px;
     letter-spacing: -0.108px;
     margin-bottom: 30px;
-    }
-    .card .feature-items{
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-    }
-    .card .feature-items .feature-item{
-      width: 298px;
-      height: 183px;
-      padding: 24px !important;
-      display: flex;
-      flex-direction: column;
-      gap: 24px;
-    }
-    .feature-item:nth-child(3){
-      margin-bottom: 100px;
-    }
-    .item-left-side{
-      width: 250px;
-      height: 69px;
-      display: flex;
-      flex-direction: column;
-      gap: 0;
-    }
-    .feature-items .feature-item .item-left-side #heading{
-      font-size: 16px !important;
-      height: 48px;
-      width: 250px !important;
-    }
-    .feature-items .feature-item .item-left-side #lesson{
-      width: 250px;
-      height: 21px;
-      font-size: 14px !important;
-      margin-top: 25px;
- }
- .feature-item:nth-child(3)  .item-left-side #lesson{
-  margin-top: 0px !important;
- }
-    .feature-items .feature-item .item-left-side #lesson span{
-      font-size: 14px;
-    }
-    .feature-item .time{
-left: 0;
-      font-size: 14px;
-      left: 0 !important;
-    }    
-    .feature-item .time span{
-      line-height: normal;
-    }
+  }
+  .card .feature-items {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  .card .feature-items .feature-item {
+    width: 298px;
+    height: 183px;
+    padding: 24px !important;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+  .feature-item:nth-child(3) {
+    margin-bottom: 100px;
+  }
+  .item-left-side {
+    width: 250px;
+    height: 69px;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+  .feature-items .feature-item .item-left-side #heading {
+    font-size: 16px !important;
+    height: 48px;
+    width: 250px !important;
+  }
+  .feature-items .feature-item .item-left-side #lesson {
+    width: 250px;
+    height: 21px;
+    font-size: 14px !important;
+    margin-top: 25px;
+  }
+  .feature-item:nth-child(3) .item-left-side #lesson {
+    margin-top: 0px !important;
+  }
+  .feature-items .feature-item .item-left-side #lesson span {
+    font-size: 14px;
+  }
+  .feature-item .time {
+    left: 0;
+    font-size: 14px;
+    left: 0 !important;
+  }
+  .feature-item .time span {
+    line-height: normal;
+  }
 
-.cards:nth-child(3) .feature-items:nth-child(1) #lesson{
-  margin-top: 30px
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
+  .cards:nth-child(3) .feature-items:nth-child(1) #lesson {
+    margin-top: 30px;
+  }
 
   footer .container {
     padding: 50px 20px 24px;
